Working on chater03: forum and announcements

--- a/Dyplom/Dyplom.tex
+++ b/Dyplom/Dyplom.tex
@@ -918,11 +918,11 @@ Specjalność: & {\bfseries \@specjalnosc}\\
 \listoffigures*
 \clearpage
 % SPIS TABEL (zostanie wygenerowany automatycznie)
-\pdfbookmark[0]{Spis tabel}{spisTabel.1} %
+%\pdfbookmark[0]{Spis tabel}{spisTabel.1} %
 %%\phantomsection
 %%\addcontentsline{toc}{chapter}{Spis tabel}
-\listoftables*
-\clearpage
+%\listoftables*
+%\clearpage
 % SPIS LISTINGÓW (zostanie wygenerowany automatycznie)
 \pdfbookmark[0]{Spis listingów}{spisListingow.1} %
 %%\phantomsection
